#10. Add a new page suffix page.multiverse and the header and the footer sections for this. Add some changes in another files and change all purple colors for black.

--- a/assets/electric.scss.liquid
+++ b/assets/electric.scss.liquid
@@ -89,7 +89,7 @@
     $font-karla-regular:  'Karla Regular';
     $font-poppins-b:  'Poppins-Bold';
 
-    $color-violet: #51426B;
+    $color-violet: #1e1e1e;
     $color-violet-800: #46414E;
     $color-accent: #e85555;
 
@@ -209,7 +209,7 @@
         }
 
         .section-title {
-            color: #51426b;
+            color: #1e1e1e;
             font-size: 28px;
             margin-bottom: 50px;
             font-family: "Poppins","HelveticaNeue","Helvetica Neue",sans-serif;
@@ -264,7 +264,7 @@
         h3 {
             text-transform: none;
             font-family: $font-karla-bold;
-            color: #51426B;
+            color: #1e1e1e;
             font-size: 20px;
         }
 
@@ -320,7 +320,7 @@
             height: 100%;
             left: 0;
             top: 0;
-            background-color: #51426B;
+            background-color: #1e1e1e;
         }
     }
     .section-heading {
@@ -544,7 +544,7 @@
 
     .item-backgrounded {
         position: relative;
-        background-color: #312B3B;
+        background-color: #1e1e1e;
 
         &.small {
             padding: 100px 0;
@@ -700,7 +700,7 @@
                 -webkit-transform: translateY(-50%);
                         transform: translateY(-50%);
                 font-size: 28px;
-                color: #51426B;
+                color: #1e1e1e;
                 font-family: Karla, sans-serif;
                 font-weight: normal;
 
@@ -885,7 +885,7 @@
                 margin-top: 30px;
 
                 .owl-dot {
-                    background-color: #51426b;
+                    background-color: #1e1e1e;
                     width: 10px;
                     height: 10px;
                     border-radius: 100%;
@@ -1031,7 +1031,7 @@
         .faq-box--title {
             font-family: 'Karla Bold', sans-serif;
             font-size: 22px;
-            color: #51426B;
+            color: #1e1e1e;
             background-color: #F6F6F6;
             padding: 19px 20px;
             margin-bottom: 10px;
@@ -1383,14 +1383,14 @@
             .buttons-nav-item-link {
                 display: inline-block;
                 font-family: 'Futura PT Medium', sans-serif;
-                color: #51426B;
-                border: 1px solid #51426B;
+                color: #1e1e1e;
+                border: 1px solid #1e1e1e;
                 padding: 15px 38px;
                 text-transform: uppercase;
 
                 &.active,
                 &:hover {
-                    background-color: #51426B;
+                    background-color: #1e1e1e;
                     color: #fff;
                 }
             }
@@ -1430,7 +1430,7 @@
         a.social--color.social-icons__link.color--light {
             color: #CDCDCD;
             &:hover {
-                color: #51426B;
+                color: #1e1e1e;
             }
         }
 
@@ -1554,7 +1554,7 @@
             }
 
             [data-drip-attribute="headline"] {
-                color: #51426B;
+                color: #1e1e1e;
                 font-size: 24px;
                 display: block;
                 margin: 0 0 20px 0;
@@ -1617,7 +1617,7 @@
             padding-top: 0;
         }
         .form-title {
-            color: #51426B;
+            color: #1e1e1e;
             font-size: 24px;
             display: block;
             margin: 0 0 20px 0;
@@ -1678,7 +1678,7 @@
         .form-desctiption {
             padding: 0 5px;
             font-size: 14px;
-            color: #51426b;
+            color: #1e1e1e;
         }
     }
 
