--- a/sections/article-template.liquid
+++ b/sections/article-template.liquid
@@ -1,6 +1,6 @@
 {% assign number_of_comments = article.comments_count %}
 
-<section class="banner banner-page" style="background-color: #51426B ">
+<section class="banner banner-page" style="background-color: #1e1e1e ">
     <div class="banner--image" style="background-image: url({{ article | img_url: '1600x'  }}); opacity:0.3; "></div>
     <div class="full-height-inner">
         <div class="container banner--container banner--container--large">
