--- a/sections/blog-template.liquid
+++ b/sections/blog-template.liquid
@@ -6,7 +6,7 @@ Don't forget to close the tag after your loop.
 
 {% endcomment %}
 
-<section class="banner banner-page" style="background-color: #51426B ">
+<section class="banner banner-page" style="background-color: #1e1e1e ">
     <div class="banner--image" style="background-image: url('{{ section.settings.background | img_url: '4472x4472' }}');
             opacity:0.3;
             "></div>
