--- a/shopify-workflow/sass/getmore-meetup.scss
+++ b/shopify-workflow/sass/getmore-meetup.scss
@@ -4,3 +4,7 @@
 @import 'sections/pages/meetup';
 @import 'sections/pages/blogs';
 @import 'sections/pages/services';
+@import 'sections/pages/page';
+
+@import 'layout/footer';
+@import 'layout/menu';
