--- a/shopify-workflow/sass/sections/pages/_services.scss
+++ b/shopify-workflow/sass/sections/pages/_services.scss
@@ -115,7 +115,7 @@
       }
 
       h1.title {
-        color: #51426b;
+        color: #1e1e1e;
         font-family: 'Karla Bold', sans-serif;
         font-size: 22px;
         line-height: 1;
