--- a/templates/blog.services.liquid
+++ b/templates/blog.services.liquid
@@ -1,6 +1,6 @@
 <div class="et">
 
-    <section class="banner banner-page" style="background-color: #51426B ">
+    <section class="banner banner-page" style="background-color: #1e1e1e ">
         <div class="banner--image" style="  background-image: url({{ 'bloglist-services.jpg' | asset_url }});
                                             opacity:0.3;
                                         "></div>
