--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,7 +1,7 @@
 <div class="et">
 
 
-    <section class="banner banner-page" style="background-color: #51426B">
+    <section class="banner banner-page" style="background-color: #1e1e1e">
         <div class="full-height-inner">
             <div class="container banner--container banner--container--large">
                 <div class="text-center color-white">
