--- a/assets/getmore-sections.css
+++ b/assets/getmore-sections.css
@@ -134,9 +134,9 @@
   font-family: "Karla Bold";
   font-weight: bold;
   text-decoration: underline;
-  -webkit-text-decoration-color: #50426b;
-  text-decoration-color: #50426b;
-  color: #50426b;
+  -webkit-text-decoration-color: #1e1e1e;
+  text-decoration-color: #1e1e1e;
+  color: #1e1e1e;
 }
 
 .getmore-page .cover .text-wrapper .subtitle p:empty {
