--- a/sections/article-work-template.liquid
+++ b/sections/article-work-template.liquid
@@ -20,7 +20,7 @@
   {% assign number_of_comments = article.comments_count | plus: 1 %}
 {% endif %}
 
-    <section class="banner banner-page" style="background-color: #51426B ">
+    <section class="banner banner-page" style="background-color: #1e1e1e ">
         <div class="banner--image" style="background-image: url({{ article | img_url: '1600x'  }}); opacity:0.3; "></div>
         <div class="full-height-inner">
             <div class="container banner--container banner--container--large">
