--- a/sections/electric__colorfull-form.liquid
+++ b/sections/electric__colorfull-form.liquid
@@ -70,7 +70,7 @@
             "type": "color",
             "id": "section_background",
             "label": "Section Color",
-            "default": "#312B3B"
+            "default": "#1e1e1e"
         },
         {
             "type": "color",
