--- a/sections/electric__full-width-items.liquid
+++ b/sections/electric__full-width-items.liquid
@@ -61,7 +61,7 @@
                 "type": "color",
                 "id": "item_background",
                 "label": "Item Color",
-                "default": "#312B3B"
+                "default": "#1e1e1e"
             },
             {
                 "type":      "range",
