--- a/sections/electric__newsletterform.liquid
+++ b/sections/electric__newsletterform.liquid
@@ -38,7 +38,7 @@
             "type": "color",
             "id": "section_background",
             "label": "Section Color",
-            "default": "#312B3B"
+            "default": "#1e1e1e"
         },
         {
             "type": "color",
