--- a/sections/electric__topimage-text-section.liquid
+++ b/sections/electric__topimage-text-section.liquid
@@ -39,7 +39,7 @@
             "type": "color",
             "id": "section_background",
             "label": "Background Color",
-            "default": "#312B3B"
+            "default": "#1e1e1e"
         },
         {
             "type": "color",
