--- a/sections/getmore-case-studies.liquid
+++ b/sections/getmore-case-studies.liquid
@@ -80,7 +80,7 @@
         "type": "color",
         "id": "sectionTitle_color",
         "label": "Section Title color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -95,7 +95,7 @@
         "type": "color",
         "id": "background_color",
         "label": "Background color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
