--- a/sections/getmore-meetup2-cover.liquid
+++ b/sections/getmore-meetup2-cover.liquid
@@ -51,7 +51,7 @@
         "type": "color",
         "id": "color_background",
         "label": "Background Color",
-        "default": "#51426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
