--- a/sections/getmore-service-offering.liquid
+++ b/sections/getmore-service-offering.liquid
@@ -60,7 +60,7 @@
         "type": "color",
         "id": "background_color",
         "label": "Background color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "color",
