--- a/sections/getmore-testimonials.liquid
+++ b/sections/getmore-testimonials.liquid
@@ -85,7 +85,7 @@
         "type": "color",
         "id": "sectionTitle_color",
         "label": "Section Title color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -100,7 +100,7 @@
         "type": "color",
         "id": "background_color",
         "label": "Background color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -110,7 +110,7 @@
         "type": "color",
         "id": "author_color",
         "label": "Author color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "color",
