--- a/sections/marketing-benefits.liquid
+++ b/sections/marketing-benefits.liquid
@@ -77,7 +77,7 @@
         "type": "color",
         "id": "sectionTitle_color",
         "label": "Section Title color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -92,7 +92,7 @@
         "type": "color",
         "id": "background_color",
         "label": "Background color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -102,7 +102,7 @@
         "type": "color",
         "id": "author_color",
         "label": "Author color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "color",
