--- a/sections/marketing-cover.liquid
+++ b/sections/marketing-cover.liquid
@@ -78,7 +78,7 @@
         "type": "color",
         "id": "color_background",
         "label": "Background Color",
-        "default": "#51426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -115,7 +115,7 @@
         "type": "color",
         "id": "title_color",
         "label": "Title Color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "select",
