--- a/sections/partnerships.liquid
+++ b/sections/partnerships.liquid
@@ -46,7 +46,7 @@
                     "type": "color",
                     "id": "section_background",
                     "label": "Section Color",
-                    "default": "#51426B"
+                    "default": "#1e1e1e"
                 },
                 {
                     "type": "image_picker",
