--- a/sections/services-cover.liquid
+++ b/sections/services-cover.liquid
@@ -55,7 +55,7 @@
         "type": "color",
         "id": "color_background",
         "label": "Background Color",
-        "default": "#51426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
