--- a/sections/services-design.liquid
+++ b/sections/services-design.liquid
@@ -85,7 +85,7 @@
         "type": "color",
         "id": "color_background",
         "label": "Background Color",
-        "default": "#51426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "header",
@@ -122,7 +122,7 @@
         "type": "color",
         "id": "title_color",
         "label": "Title Color",
-        "default": "#50426b"
+        "default": "#1e1e1e"
       },
       {
         "type": "select",
