--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -43,7 +43,7 @@
                     "type": "color",
                     "id": "section_background",
                     "label": "Section Color",
-                    "default": "#51426B"
+                    "default": "#1e1e1e"
                 },
                 {
                     "type": "image_picker",
