--- a/shopify-workflow/sass/sections/pages/_blogs.scss
+++ b/shopify-workflow/sass/sections/pages/_blogs.scss
@@ -9,7 +9,7 @@
   }
 
   .blog-title {
-    color: #56476f;
+    color: #1e1e1e;
     font-family: 'Karla Bold';
     font-size: 36px;
     font-weight: normal;
@@ -119,7 +119,7 @@
 
         &:hover {
           background-color: #ffffff;
-          color: #51426b !important;
+          color: #1e1e1e !important;
         }
       }
     }
