--- a/templates/blog.work.liquid
+++ b/templates/blog.work.liquid
@@ -1,6 +1,6 @@
 <div class="et">
 
-    <section class="banner banner-page" style="background-color: #51426B ">
+    <section class="banner banner-page" style="background-color: #1e1e1e ">
         <div class="banner--image" style="  background-image: url({{ 'shopify-store-setup.jpg' | asset_url }});
                                             opacity:0.1;
                                         "></div>
